--- a/views/partials/nav.erb
+++ b/views/partials/nav.erb
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/game">
+      <a class="navbar-brand" href="/games">
         Index
       </a>
-      <a class="navbar-brand" href="/game/new">New Game</a>
+      <a class="navbar-brand" href="/games/new">New Game</a>
     </div>
   </div>
 </nav>
